maybe fix overflow settings
git-svn-id: https://cbilsvn.pmacs.upenn.edu/svn/gus/WDK/trunk@22170 4235af6a-31f9-0310-9ad3-ecf6348f2534

--- a/View/src/Components/Mesa/src/Style/Ui/DataTable.scss
+++ b/View/src/Components/Mesa/src/Style/Ui/DataTable.scss
@@ -9,12 +9,11 @@
   }
   .DataTable-Header, .DataTable-Body {
     display: block;
+    overflow-x: visible;
+    overflow-y: auto;
     table {
       table-layout: fixed;
       width: 100%;
     }
-  }
-  .DataTable-Body {
-    overflow-x: auto;
   }
 }
